--- a/Views/Customer2/MyProfileCustomer.cshtml
+++ b/Views/Customer2/MyProfileCustomer.cshtml
@@ -3,7 +3,10 @@
 @{
     Layout = "~/Views/Shared/_MainLayout.cshtml";
 }
+@section css{
 
+    <link href="~/Areas/Admin/Public/css/argon.min.css" rel="stylesheet" />
+}
 <div class="main-content">
 
     <div class="header pb-8 pt-5 pt-lg-8 d-flex align-items-center" style="min-height: 600px; background-image: url('/Public/Image/city.jpg'); background-size: cover; background-position: center top;">
