--- a/Views/Searches/Search.cshtml
+++ b/Views/Searches/Search.cshtml
@@ -61,7 +61,7 @@
                         <a style="max-height:42px" class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
                             <div style="margin-top:-15px">
                                 <img src="@cus.Customer_Avatar" style="width: 50px;height:50px;border-radius: 50%" />
-                                Customer1 <span class="caret"></span>
+                                @cus.Customer_Name <span class="caret"></span>
                             </div>
                         </a>
                         <ul class="dropdown-menu">
