--- a/Views/Customer2/OrderListIndex.cshtml
+++ b/Views/Customer2/OrderListIndex.cshtml
@@ -6,12 +6,8 @@
 }
 
 @section css{
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto|Varela+Round">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-
-    <link href="~/Areas/Admin/Public/css/vieworder.css" rel="stylesheet" />
-
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.25/css/jquery.dataTables.css">
     <link href="~/Areas/Admin/Public/DataTable/pagination.css" rel="stylesheet" />
 }
@@ -31,15 +27,15 @@
 
 <div class="container-xl" style="margin-top: 80px;margin-bottom: 80px">
     <div class="card">
-        <div class="card-header bg-primary pt-2 pb-2">
+        <div class="card-header bg-info pt-2 pb-2">
             <div class="row">
                 <div class="col-md-3">
-                    <h1 style="color:white;margin-bottom:0px">
+                    <h3 style="color:white;margin-bottom:0px;padding: 8px;font-weight: bold">
                         Order List
-                    </h1>
+                    </h3>
                 </div>
                 <div class="col-md-9">
-                    <a href="/Customer2/OrderListIndex" style="float: right" class="btn btn-primary">
+                    <a href="/Customer2/OrderListIndex" style="float: right;border-radius: 6px;border: 1px white solid" class="btn-style-white">
                         <span>
                             <i class="fa fa-spin" style="margin-right: 10px">&#xE863;</i>
                             <span> Refresh </span>
@@ -47,12 +43,12 @@
                     </a>
                 </div>
             </div>
-            
+
         </div>
         <div class="card-body">
             <div class="row">
                 <div class="col-md-12">
-                    <table id="table_OrderList" class="table table-striped table-hover">
+                    <table id="table_OrderList" class="table">
                         <thead class="thead-light">
                             <tr>
                                 <th style="font-size: 0.875rem">Order Code</th>
@@ -67,39 +63,34 @@
                             @foreach (var item in Model)
                             {
                                 <tr style="height: 60px">
-                                    <td>@item.Id</td>
-                                    <td>@item.Order_DateCreate</td>
-                                    <td>@item.Order_Description</td>
-                                    <td>$ @item.Order_TotalCost</td>
-                                    <td style="font-size: 0.8125rem">
+                                    <td >@item.Id</td>
+                                    <td >@item.Order_DateCreate</td>
+                                    <td >@item.Order_Description</td>
+                                    <td >$ @item.Order_TotalCost</td>
+                                    <td style="font-size: 1rem;">
                                         @*<span class="status text-success">&bull;</span>@item.OrderDetail_Status*@
                                         @if (item.Order_Status == 0)
                                         {
-                                            <span class="badge badge-dot mr-4">
-                                                <i class="bg-primary"></i>
-                                                <span style="font-size: 14px"> Pending </span>
-                                            </span>
+
+                                            <i class="fa fa-circle" style="color: blueviolet;margin-right: 8px;font-size:0.6rem"></i>
+                                            <span> Pending </span>
                                         }
                                         else if (item.Order_Status == 1)
                                         {
-                                            <span class="badge badge-dot mr-4">
-                                                <i class="bg-warning"></i>
-                                                <span style="font-size: 14px"> Started </span>
-                                            </span>
+                                            <i class="fa fa-circle" style="color: orangered;margin-right: 8px;font-size:0.6rem"></i>
+                                            <span> Started </span>
                                         }
                                         else if (item.Order_Status == 2)
                                         {
-                                            <span class="badge badge-dot mr-4">
-                                                <i class="bg-success"></i>
-                                                <span style="font-size: 14px"> Completed </span>
-                                            </span>
+
+                                            <i class="fa fa-circle" style="color: chartreuse;margin-right: 8px;font-size:0.6rem"></i>
+                                            <span> Completed </span>
                                         }
                                         else
                                         {
-                                            <span class="badge badge-dot mr-4">
-                                                <i class="bg-dark"></i>
-                                                <span style="font-size: 14px"> Deleted </span>
-                                            </span>
+
+                                            <i class="fa fa-circle" style="color: black;margin-right: 8px;font-size:0.6rem"></i>
+                                            <span> Deleted </span>
                                         }
                                     </td>
                                     <td>
@@ -116,7 +107,7 @@
             </div>
         </div>
     </div>
-    
+
 </div>
 
 @section js{
