--- a/Areas/Admin/Views/RoleManagement/RoleIndex.cshtml
+++ b/Areas/Admin/Views/RoleManagement/RoleIndex.cshtml
@@ -111,10 +111,10 @@
                 <table id="table_Role" class=" text-center align-items-center table-dark table-flush">
                     <thead class="thead-dark">
                         <tr>
-                            <th style="font-size: 0.875rem">Name</th>
-                            <th style="font-size: 0.875rem">Description</th>
-                            <th style="font-size: 0.875rem">#</th>
-                            <th style="font-size: 0.875rem">Action</th>
+                            <th class="text-white" style="font-size: 0.875rem">Name</th>
+                            <th class="text-white" style="font-size: 0.875rem">Description</th>
+                            <th class="text-white" style="font-size: 0.875rem">#</th>
+                            <th class="text-white" style="font-size: 0.875rem">Action</th>
                         </tr>
                     </thead>
                     <tbody class="list">
