--- a/Views/Searches/Search.cshtml
+++ b/Views/Searches/Search.cshtml
@@ -81,7 +81,7 @@
                                 </p>
                             </div>
                             <div class="col-md-4">
-                                <a href="#" onclick="return _Refesh()" style="float: right;border-radius: 6px;border: 1px white solid" class="btn-style-white">
+                                <a href="#" onclick="return _Refesh()" style="float: right;border-radius: 6px;border: 1px white solid;font-size: 0.8rem" class="btn-style-white">
                                     <span>
                                         <i class="fa fa-spin" style="margin-right: 10px">&#xE863;</i>
                                         <span> Refresh </span>
@@ -201,7 +201,7 @@
                                 </p>
                             </div>
                             <div class="col-md-4">
-                                <a href="#" onclick="return _Refesh()" style="float: right;border-radius: 6px;border: 1px white solid" class="btn-style-white">
+                                <a href="#" onclick="return _Refesh()" style="float: right;border-radius: 6px;border: 1px white solid;font-size: 0.8rem" class="btn-style-white">
                                     <span>
                                         <i class="fa fa-spin" style="margin-right: 10px">&#xE863;</i>
                                         <span> Refresh </span>
