--- a/Views/Team/Section_Team.cshtml
+++ b/Views/Team/Section_Team.cshtml
@@ -25,7 +25,7 @@
                     <div class="team-block-single">
                         <div class="team-grids">
                             <a href="#team-single">
-                                <img src="@CEO.User_Avatar" class="img-fluid" alt="">
+                                <img src="@CEO.User_Avatar" style="height: 380px" class="img-fluid" alt="">
                                 <div class="team-info">
                                     <div class="social-icons-section">
                                         <a class="fac" href="#facebook">
@@ -54,7 +54,7 @@
                     <div class="team-block-single active">
                         <div class="team-grids active">
                             <a href="#team-single">
-                                <img src="@admin.User_Avatar" class="img-fluid" alt="">
+                                <img src="@admin.User_Avatar" style="height: 380px" class="img-fluid" alt="">
                                 <div class="team-info">
                                     <div class="social-icons-section">
                                         <a class="fac" href="#facebook">
@@ -83,7 +83,7 @@
                     <div class="team-block-single">
                         <div class="team-grids">
                             <a href="#team-single">
-                                <img src="@Manager.User_Avatar" class="img-fluid" alt="">
+                                <img src="@Manager.User_Avatar" style="height: 380px" class="img-fluid" alt="">
                                 <div class="team-info">
                                     <div class="social-icons-section">
                                         <a class="fac" href="#facebook">
