--- a/Areas/Admin/Views/UserManagement/AddUser.cshtml
+++ b/Areas/Admin/Views/UserManagement/AddUser.cshtml
@@ -28,7 +28,7 @@
                         </div>
                     </div>
                     <div class="card-body">
-                        <form action="/Admin/UserManagement/Submit_Add" method="post" enctype="multipart/form-data">
+                        <form action="/Admin/UserManagement/Submit_Add" id="FormDetail" method="post" enctype="multipart/form-data">
                             <h6 class="heading-small text-muted mb-4">User information</h6>
                             <div class="pl-lg-4">
                                 <div class="row">
@@ -53,7 +53,7 @@
                                     </div>
                                     <div class="col-md-3 col-lg-3 text-right" style="margin-bottom: 20px;">
                                         <p class="form-control-label">Avatar</p>
-                                        <input name="AvatarUpload" type="file" class="btn btn-sm btn-primary col-lg-12">
+                                        <input name="AvatarUpload" id="Avatar" type="file" class="btn btn-sm btn-primary col-lg-12">
                                     </div>
                                 </div>
 
@@ -70,7 +70,7 @@
                                             <input type="password" required name="User_Password" class="form-control form-control-alternative">
                                         </div>
                                     </div>
-                                   
+
 
                                     <div class="col-lg-6">
                                         <div class="form-group focused">
@@ -163,6 +163,33 @@
     <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-beta.1/dist/css/select2.min.css" rel="stylesheet" />
     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-beta.1/dist/js/select2.min.js"></script>
     <script>
+        $(document).ready(function () {
+            $("#FormDetail").submit(function (submitEvent) {
+                var count = 0;
+                var fileUpload1 = $("#Avatar").get(0);
+                var file = fileUpload1.files[0];
+                fileName = file.name;
+                var fileExt = fileName.split('.').pop();
+                switch (fileExt) {
+                    case 'jpg':
+                        break;
+                    case 'jpeg':
+                        break;
+                    case 'png':
+                        break;
+                    case 'jfif':
+                        break;
+                    case 'gif':
+                        break;
+                    default:
+                        count += 1;
+                        submitEvent.preventDefault();
+                }
+                if (count > 0) {
+                    alert("File is not valid !");
+                }
+            });
+        });
         $('select').select2({
             placeholder: 'Role',
             tokenSeparators: [',', ' '],
@@ -170,4 +197,3 @@
         });
     </script>
 }
-
